// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#constructor() 1`] = `
Cycle {
  "done": false,
  "source": "test",
  "state": 0,
}
`;

exports[`#drop() 1`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`#drop() 2`] = `
Cycle {
  "done": true,
  "source": Array [],
  "state": 0,
}
`;
